--- a/blogr-nextjs-prisma/package.json
+++ b/blogr-nextjs-prisma/package.json
@@ -11,7 +11,9 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "next": "9.5.5",
+    "@prisma/client": "^2.18.0",
+    "next": "^10.0.7",
+    "object-path": "^0.11.5",
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-markdown": "5.0.2"
